# simple-token-generator

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  token_generator.rs
src/components/: FormGenerateToken.tsx  SettingsDialog.tsx
src/components/shared/: button-copy.tsx  form-message-wrapper.tsx  required-star.tsx  textarea-grey-copy.tsx  textarea-grey.tsx
src/components/ui/: dialog.tsx  form.tsx  textarea.tsx
